tdf#108973 writerfilter: allow textboxes to be in the background

Word appears to use negative z-indexes to indicate behind-text
zordering and positive numbers for in-front placement. This
was added for shapes in LO4.3, now applying to textboxes also.

Change-Id: I3b06fb231329f151ca978f3a68b4d4e89bc28515